--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,12 +24,12 @@ html(lang='en')
               li 
                 a(href='/home/users') All users
               li 
-                a(href='/home/streams') All streams
+                a(href='/home/categories') All categories
                 hr
               li 
                 a(href='/home/user/create') Create new user
               li 
-                a(href='/home/stream/create') Create new stream
+                a(href='/home/category/create') Create new category
               li 
                 a(href='/home/club/create') Create new club
         div(class='col-sm-10')
